# PDF-Parser

./: .gitignore  main.py  pyproject.toml
src/parser/: __init__.py  camelot_table_extractor.py  docling_table_extractor.py  image_extractor.py  pdf_detector.py  pdf_parser.py  report_generator.py  table_extractor.py  text_extractor.py
utils/: __init__.py  logutils.py
