[project]
name = "pdf-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "camelot-py>=1.0.0",
    "ghostscript>=0.8.1",
    "logger>=1.4",
    "pdf2image>=1.17.0",
    "pi-heif>=1.0.0",
    "pikepdf>=9.9.0",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
    "tesseract>=0.1.3",
    "unstructured>=0.18.3",
    "unstructured-inference>=1.0.5",
    "unstructured-pytesseract>=0.3.15",
]
